Adds SRC_ROOT in twitter sample plist + AppCoreKit.conf.

--- a/AppCoreKit 2.0.0/TwitterTimeline/TwitterTimeline/TwitterTimeline-Info.plist
+++ b/AppCoreKit 2.0.0/TwitterTimeline/TwitterTimeline/TwitterTimeline-Info.plist
@@ -26,6 +26,8 @@
 	<true/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>SRC_ROOT</key>
+	<string>$SRCROOT</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
