--- a/AppCoreKit 2.1.0/LayoutLab/LayoutLab/LayoutLab-Info.plist
+++ b/AppCoreKit 2.1.0/LayoutLab/LayoutLab/LayoutLab-Info.plist
@@ -28,6 +28,14 @@
 	<true/>
 	<key>SRC_ROOT</key>
 	<string>$SRCROOT</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>BasicGothicMobiPro-BlackItalic</string>
+		<string>NewsGothicStd-Bold.otf</string>
+		<string>ChaparralPro-Regular.otf</string>
+		<string>test.ttf</string>
+		<string>testbold.ttf</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
